# SimForge

./: .gitignore  .gitmodules  CLAUDE.md  README.md
JaxRLWorld/: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
JaxRLWorld/rlworld/: __init__.py
JaxRLWorld/rlworld/assets/K1/: K1_22dof.urdf  K1_locomotion.urdf  K1_serial-ZED.urdf  K1_serial.urdf
JaxRLWorld/rlworld/assets/T1/: T1_23dof.urdf  T1_23dof.xml  T1_29dof.urdf  T1_locomotion.urdf
JaxRLWorld/rlworld/assets/T1_deprecated/: T1_locomotion.urdf
JaxRLWorld/rlworld/assets/g1/: g1.xml
JaxRLWorld/rlworld/assets/go1_model_clean/: CMakeLists.txt  package.xml
JaxRLWorld/rlworld/assets/go1_model_clean/mjcf/: go1_simplified_stl.xml
JaxRLWorld/rlworld/assets/go1_model_clean/urdf/: go1_dae.urdf  go1_obj.urdf  go1_simplified_stl.urdf
JaxRLWorld/rlworld/assets/go1_model_clean/vscode_json/: tasks.json
JaxRLWorld/rlworld/assets/menagerie_T1/: t1.xml
JaxRLWorld/rlworld/assets/motions/gangnam_style/: G1_gangnam_style_V01.npz
JaxRLWorld/rlworld/assets/mujoco_menagerie/unitree_g1/: g1.xml
JaxRLWorld/rlworld/assets/multilink_arms/: 30_link_arm.urdf  branch_generator.py  generator.py
JaxRLWorld/rlworld/assets/unitree_go2/: go2_constants.py
JaxRLWorld/rlworld/assets/unitree_go2/xmls/: go2.xml
JaxRLWorld/rlworld/imitation/: __init__.py
JaxRLWorld/rlworld/imitation/npmp/: __init__.py  buffer.py  config.py  decoder.py  encoder.py  evaluator.py  expert_dispatch.py  loss.py  metrics.py  module.py  prior.py  trainer.py
JaxRLWorld/rlworld/rl/: __init__.py
JaxRLWorld/rlworld/rl/actuators/: __init__.py  actuator_base.py  actuator_cfg.py  actuator_net.py  actuator_pd.py
JaxRLWorld/rlworld/rl/algorithms/: __init__.py  base.py  logging_spec.py
JaxRLWorld/rlworld/rl/algorithms/fast_td3/: __init__.py  fast_td3.py  losses.py  metrics.py  update.py
JaxRLWorld/rlworld/rl/algorithms/metrics/: __init__.py  base.py
JaxRLWorld/rlworld/rl/algorithms/ppo/: __init__.py  losses.py  metrics.py  ppo.py  update.py
JaxRLWorld/rlworld/rl/algorithms/ppo_dr3/: __init__.py  losses.py  metrics.py  ppo_dr3.py  update.py
JaxRLWorld/rlworld/rl/algorithms/sac/: __init__.py  losses.py  metrics.py  sac.py  update.py
JaxRLWorld/rlworld/rl/algorithms/scaffolded_tdmpc2/: __init__.py  abd_dynamics.py  losses.py  metrics.py  scaffolded_tdmpc2.py  scaffolded_world_model.py  update.py
JaxRLWorld/rlworld/rl/algorithms/sim_mpc/: __init__.py  networks.py  planner.py  sim_mpc.py  state_sync.py
JaxRLWorld/rlworld/rl/algorithms/td3/: __init__.py  losses.py  metrics.py  td3.py  update.py
JaxRLWorld/rlworld/rl/algorithms/tdmpc2/: __init__.py  losses.py  (+4 more)
JaxRLWorld/rlworld/rl/configs/: __init__.py  base_config.py  common_config_classes.py  default_config.py  genesis_config_classes.py  mujoco_config_classes.py  newton_config_classes.py
JaxRLWorld/rlworld/rl/envs/: __init__.py  gymnasium_env.py  indexing.py  lifecycle.py  maniskill_env.py  multi_sim_world.py  robot_data.py  stats_collector.py  world.py  world_jax.py
JaxRLWorld/rlworld/rl/evals/: __init__.py  evaluator.py  policy_wrappers.py
JaxRLWorld/rlworld/rl/modules/: normalization.py  utils.py
JaxRLWorld/rlworld/rl/runners/: __init__.py  base_runner.py  iteration_data.py  model_based_runner.py  off_policy_runner.py  on_policy_runner.py  privileged_model_based_runner.py  sim_mpc_runner.py
JaxRLWorld/rlworld/rl/storages/: __init__.py  circular_buffer.py  nstep_replay_buffer.py  replay_buffer.py  rollout_storage.py  scaffolded_replay_buffer.py  sequence_replay_buffer.py
JaxRLWorld/rlworld/rl/terrains/: __init__.py  hf_terrains.py  importer.py  sub_terrain_cfg.py  terrain_generator.py  utils.py
JaxRLWorld/rlworld/rl/utils/: __init__.py  checkpoint.py  console.py  dataset_manager.py  dynamics_dataset.py  entity_utils.py  jax_utils.py  logger.py  pretty.py  quat_utils.py  resolve.py  reward_scaler.py  utils.py  wandb_checkpoint.py  yaml_io.py
JaxRLWorld/rlworld/rl/vis/: __init__.py  rasterizer_context.py
JaxRLWorld/rlworld/scripts/branched_multilink/: aba_gnn.py  mlp.py
JaxRLWorld/rlworld/scripts/diag/: check_action_indexing_parity.py  check_actuator_train_parity.py  check_contact_force_parity.py  check_determinism.py  check_eval_determinism.py  check_feet_slip_breakdown.py  check_feet_slip_trace.py  check_foot_friction.py  check_g1_contact_force_parity.py  check_g1_feet_swing_height.py  check_g1_foot_capsule_coverage.py  check_g1_ordering.py  check_genesis_marker_geom.py  check_lazy_imports.py  check_nn_config_yaml_roundtrip.py  check_reward_parity.py  check_robot_data_frames.py  check_t1_getup_genesis_contact_filter.py  check_terrain_importer_refactor.py  check_track_lin_vel_inputs.py  check_train_determinism.py  debug_g1_short_capsule_rejection.py  g1_airborne_contact_check.py  g1_mjmodel_dump.py  g1_physics_params_dump.py  g1_sim2sim_dump.py  inspect_contact0_bytecode.py  inspect_genesis_contact0_source.py  inspect_plane_pos.py  t1_mujoco_dynamics.py  t1_mujoco_order.py  t1_mujoco_pd.py  t1_mujoco_shape_friction.py  t1_newton_dynamics.py  t1_newton_order.py  t1_newton_pd.py  t1_newton_shape_friction.py  t1_opt_compare.py  t1_policy_trace.py  t1_reset_pose.py  (+3 more)
JaxRLWorld/rlworld/scripts/evaluation/: eval_cross_sim.py  eval_cross_sim_trajdump.py  eval_genesis.py  eval_mujoco.py  eval_newton.py  g1.py  go1.py  go2.py  newton_g1.py  newton_go1.py  newton_go2.py
JaxRLWorld/rlworld/scripts/gymnasium/: dynamics_dinv_pendulum.py  dynamics_inv_pendulum.py  dynamics_stand.py  mlp_dinv_pendulum.py  mlp_inv_pendulum.py  mlp_stand.py  rod_stand.py
JaxRLWorld/rlworld/scripts/multilink/: aba_gnn.py  mlp.py
JaxRLWorld/rlworld/scripts/optuna/: fast_td3.py
JaxRLWorld/rlworld/scripts/save_load_test/: fast_td3.py
JaxRLWorld/rlworld/scripts/t1/: aba.py  aba_gnn.py  aba_re.py  aba_tokenizer.py  abdnet.py  ablation.py  bot.py  crba.py  dr3.py  gnn.py  mlp.py  rodrigues.py  swat.py
JaxRLWorld/rlworld/scripts/t1_tracking/: _train_motion.py
JaxRLWorld/rlworld/tools/motion/: __init__.py  booster_to_npz.py  csv_to_npz.py  motion_loader.py  mujoco_replayer.py  visualize_npz.py
(+561 files in other folders)
