[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlworld"
version = "0.1.0"
description = "Modular RL framework for robot locomotion across simulators"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "robotics", "locomotion", "simulation", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "gymnasium>=0.29.0",
    "pytz",
]

[project.optional-dependencies]
genesis = ["genesis-world>=0.3.0"]
newton = ["warp>=1.0.0"]
wandb = ["wandb>=0.16.0"]
dev = [
    "pytest",
    "ruff",
]
all = [
    "rlworld[genesis,newton,wandb]",
]

[project.urls]
Homepage = "https://github.com/jsw7460/SimForge"
Repository = "https://github.com/jsw7460/SimForge"
Issues = "https://github.com/jsw7460/SimForge/issues"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
rlworld = [
    "assets/**/*.urdf",
    "assets/**/*.xacro",
    "assets/**/*.stl",
    "assets/**/*.STL",
    "assets/**/*.dae",
    "assets/**/*.obj",
    "assets/**/*.mtl",
    "assets/**/*.xml",
    "assets/**/*.yaml",
    "assets/**/*.json",
    "assets/**/*.png",
    "assets/**/*.pkl",
]
