[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rlworld"
version = "0.1.0"
description = "Modular RL framework for robot locomotion across simulators"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
keywords = ["reinforcement-learning", "robotics", "locomotion", "simulation", "jax"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "equinox>=0.11.0",
    "optax>=0.2.0",
    "gymnasium>=0.29.0",
    "pytz",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Genesis, Newton, and mjlab are installed from git submodules (see
# README), not via PyPI extras. Only wandb is a real optional PyPI dep.
wandb = ["wandb>=0.16.0"]
dev = [
    "pytest",
    "ruff",
    "pre-commit",
]
all = ["rlworld[wandb]"]

[project.urls]
Homepage = "https://github.com/jsw7460/SimForge"
Repository = "https://github.com/jsw7460/SimForge"
Issues = "https://github.com/jsw7460/SimForge/issues"

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = [
    "third_party",
    "output",
    "outputs",
    "build",
    "*.egg-info",
]

[tool.ruff.lint]
# Conservative rule set — prioritizes catching real bugs over style policing.
# `E`/`W`: pycodestyle errors+warnings.
# `F`: pyflakes — unused imports, undefined names, real bugs.
# `I`: isort — import order.
# `UP`: pyupgrade — modernize syntax (e.g. `Optional[X]` → `X | None`) on py310+.
# `B`: bugbear — common Python pitfalls.
select = ["E", "W", "F", "I", "UP", "B"]
ignore = [
    "E501",  # line too long — formatter handles long-but-stable lines
    "E731",  # lambda assignment (we use these a lot for inline configs)
    "E741",  # ambiguous var name (we use single-letter math vars often)
    "E402",  # module-import-not-at-top — required for jax/genesis env-var setup before heavy imports
    "B006",  # mutable default arg — every hit in this codebase is a read-only list of ints/floats (architecture hyperparams), verified
    "B008",  # function call in default arg — common with field(default_factory=...)
    "B024",  # ABC without abstract method — we use ABCs for nominal typing too
    "B027",  # empty method in ABC — these are intentional no-op hooks (e.g. World._post_setup), not abstract
    "B028",  # warnings.warn without stacklevel
    "B904",  # raise from inside except — too noisy initially
    "B905",  # zip() without strict= — we never hit length-mismatch bugs from zip in this codebase
    "B007",  # unused loop control variable — purely stylistic noise
    "F841",  # unused local variable — common debug/inspection pattern in dev scripts; real bugs (F811, B006-mutate) are caught by other rules
    "UP006", # use `list` instead of `List` — we still target older typing in places
    "UP007", # use `X | Y` instead of `Union[X, Y]` — same reason
    "UP035", # `typing.X` deprecated alias — same reason
]
# Allow autofix for everything ruff can repair on its own.
fixable = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # re-exports look like unused imports
"tests/**/*.py" = ["F401", "F811"]
"scripts/**/*.py" = ["E402"]  # scripts often set env vars before imports

[tool.ruff.lint.isort]
known-first-party = ["rlworld"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = false  # don't reformat code blocks inside docstrings

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
rlworld = [
    "assets/**/*.urdf",
    "assets/**/*.xacro",
    "assets/**/*.stl",
    "assets/**/*.STL",
    "assets/**/*.dae",
    "assets/**/*.obj",
    "assets/**/*.mtl",
    "assets/**/*.xml",
    "assets/**/*.yaml",
    "assets/**/*.json",
    "assets/**/*.png",
    "assets/**/*.pkl",
]
